Closed Bug 603354 Opened 15 years ago Closed 15 years ago

hasKHRImage is used uninitialized in EGLLibrary::EnsureInitialized

Categories

(Core :: Graphics, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla2.0b8

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug)

Details

(Keywords: coverity)

Attachments

(1 file)

196 static class EGLLibrary 266 PRBool EnsureInitialized() 366 PRBool hasKHRImage; Let this condition be false: 367 if (strstr(extensions, "EGL_KHR_image ") || 368 (strlen(extensions) >= strlen("EGL_KHR_image") && 369 strcmp(extensions+(strlen(extensions)-strlen("EGL_KHR_image")), "EGL_KHR_image"))) 370 { skip this statement: 371 hasKHRImage = PR_TRUE; 372 } hasKHRImage is used uninitialized here: 387 if (hasKHRImage) { 388 mHave_EGL_KHR_image_base = PR_TRUE; 389 mHave_EGL_KHR_image_pixmap = PR_TRUE; 390 }
Blocks: 575469
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #482492 - Flags: review?(bas.schouten)
Attachment #482492 - Flags: review?(bas.schouten) → review+
Attachment #482492 - Flags: approval2.0?
Attachment #482492 - Flags: approval2.0? → approval2.0+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: