Bug 603354 hasKHRImage is used uninitialized in EGLLibrary::EnsureInitialized r=bas